--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,32 +32,77 @@ body {
 }
 .logo:after {
     content: "";
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #000000;
     width: 200px;
     display: block;
     margin: 0 auto;
     margin-top: 20px;
 }
+
 .card {
     display: inline-block;
     font-family: sans-serif;
     margin-top: 50px;
 }
-.card img {
+.student_image {
     border-radius: 50%;
     width: 200px;
     height: 200px;
     object-fit: cover;
 }
-.card p {
-margin-top: 5px;
-}
 .universitet {
-    color: darkgray;
+    color: #a2a2a2;
 }
-/*
-Далее пробую азы адаптивной верстки
- */
+
+.student_card{
+    position: absolute;
+    border: 1px solid #8b8b8b;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 12px 3px rgba(48, 50, 50, 0.64);
+    -moz-box-shadow:    0px 0px 12px 3px rgba(48, 50, 50, 0.64);
+    box-shadow:         0px 0px 12px 3px rgba(48, 50, 50, 0.64);
+    display: none;
+    padding: 40px 10px 10px 10px;
+    top: 40%;
+    left: 40%;
+    width: 500px;
+    background-color: rgb(113, 200, 172);
+}
+.student_card>.student_image {
+    border-radius: 20%;
+}
+.student_card>.surname {
+    font-size: 30px;
+}
+.student_card>.universitet {
+    color: #a22a05;
+}
+.close {
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    width: 32px;
+    height: 32px;
+    opacity: 0.3;
+}
+.close:hover {
+    opacity: 1;
+}
+.close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: #000000;
+}
+.close:before {
+    transform: rotate(45deg);
+}
+.close:after {
+    transform: rotate(-45deg);
+}
+
 @media (max-width: 479px) {
     .card {
         width: 100%;
