--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,19 @@ body {
 .popup-card__close:after {
     transform: rotate(-45deg);
 }
+.pagination {
+    margin-top: 20px;
+}
+.pagination > li{
+    list-style: none;
+    display: inline-block;
+}
+.pagination a {
+    font-size: 24px;
+    text-decoration: none;
+    margin: 20px 20px;
+}
+
 
 @media (max-width: 479px) {
     .card {
